--- a/SWB4/swb/SWBAdmin/src/swbadmin/js/fckeditor/editor/filemanager/browser/default/frmcreatefolder.html
+++ b/SWB4/swb/SWBAdmin/src/swbadmin/js/fckeditor/editor/filemanager/browser/default/frmcreatefolder.html
@@ -95,7 +95,7 @@ window.onload = function()
 		</script>
 	</head>
 	<body>
-		<table class="fullHeight" cellSpacing="0" cellPadding="0" width="100%" border="0">
+		<!--table class="fullHeight" cellSpacing="0" cellPadding="0" width="100%" border="0">
 			<tr>
 				<td>
 					<button type="button" style="WIDTH: 100%" onclick="CreateFolder();">
@@ -109,6 +109,6 @@ window.onload = function()
 					</button>
 				</td>
 			</tr>
-		</table>
+		</table-->
 	</body>
 </html>
